--- a/toc.html
+++ b/toc.html
@@ -17,19 +17,16 @@
         <!-- Custom HTML head -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="stylesheet" href="css/variables-8adf115d.css">
+        <link rel="stylesheet" href="css/general-2459343d.css">
+        <link rel="stylesheet" href="css/chrome-ae938929.css">
+        <link rel="stylesheet" href="css/print-9e4910d8.css" media="print">
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="fonts/fonts-9644e21d.css">
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="./theme/mdbook-admonish.css">
         <link rel="stylesheet" href="./theme/catppuccin.css">
-        <link rel="stylesheet" href="./theme/catppuccin-admonish.css">
     </head>
     <body class="sidebar-iframe-inner">
-        <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">Welcome</li><li class="chapter-item expanded "><a href="intro.html" target="_parent"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Quick start</li><li class="chapter-item expanded "><a href="subsystem/quick-start.html" target="_parent"><strong aria-hidden="true">2.</strong> Using as subsystem of Garuda</a></li><li class="chapter-item expanded "><a href="nixos-module/quick-start.html" target="_parent"><strong aria-hidden="true">3.</strong> Using as NixOS module</a></li></ol>
+        <ol class="chapter"><li class="chapter-item expanded "><li class="part-title">Welcome</li></li><li class="chapter-item expanded "><span class="chapter-link-wrapper"><a href="intro.html" target="_parent"><strong aria-hidden="true">1.</strong> Introduction</a></span></li><li class="chapter-item expanded "><li class="part-title">Quick start</li></li><li class="chapter-item expanded "><span class="chapter-link-wrapper"><a href="subsystem/quick-start.html" target="_parent"><strong aria-hidden="true">2.</strong> Using as subsystem of Garuda</a></span></li><li class="chapter-item expanded "><span class="chapter-link-wrapper"><a href="nixos-module/quick-start.html" target="_parent"><strong aria-hidden="true">3.</strong> Using as NixOS module</a></span></li></ol>
     </body>
 </html>
